--- a/OwinSelfHostExpanded/OwinSelfHostExpanded.csproj
+++ b/OwinSelfHostExpanded/OwinSelfHostExpanded.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasicAuthenticationHandler.cs" />
     <Compile Include="Handler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
